--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,17 @@
 {
-  "name": "vendor_slug/package_slug",
-  "description": "package_description",
+  "name": "rabiloo/coding-standard",
+  "description": "Rabiloo's PHP coding standard",
   "keywords": [
-    "vendor_slug",
-    "package_slug"
+    "rabiloo",
+    "coding-standard",
+    "coding-style"
   ],
-  "homepage": "https://github.com/vendor_slug/package_slug",
+  "homepage": "https://github.com/rabiloo/php-coding-standard",
   "license": "MIT",
   "authors": [
     {
-      "name": "author_name",
-      "email": "author@domain.com",
+      "name": "Oanh Nguyen",
+      "email": "oanhnn.bk@gmail.com",
       "role": "Developer"
     }
   ],
@@ -18,19 +19,22 @@
     "php": "^8.0"
   },
   "require-dev": {
+    "illuminate/support": "^9.48",
     "laravel/pint": "^1.0",
+    "orchestra/testbench": "^7.19",
     "phpunit/phpunit": "^9.5",
-    "squizlabs/php_codesniffer": "^3.6",
-    "vimeo/psalm": "^4.11"
+    "psalm/plugin-laravel": "^2.5",
+    "squizlabs/php_codesniffer": "^3.7",
+    "vimeo/psalm": "^5.6"
   },
   "autoload": {
     "psr-4": {
-      ":namespace\\": "src"
+      "Rabiloo\\CodingStandard\\": "src"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      ":namespace\\Tests\\": "tests"
+      "Rabiloo\\CodingStandard\\Tests\\": "tests"
     }
   },
   "scripts": {
@@ -42,6 +46,13 @@
   "config": {
     "sort-packages": true
   },
-  "minimum-stability": "dev",
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Rabiloo\\CodingStandard\\ServiceProvider"
+      ]
+    }
+  },
+  "minimum-stability": "stable",
   "prefer-stable": true
 }
