--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -2,12 +2,15 @@
 <ruleset
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:noNamespaceSchemaLocation="vendor/squizlabs/php_codesniffer/phpcs.xsd"
-    name="vendor_name's PHP coding standard"
+    name="Rabiloo"
 >
-    <description>This standard extends PSR-12</description>
+    <description>Rabiloo's PHP coding standard</description>
 
     <!-- display progress -->
     <arg value="p"/>
+
+    <!-- Show sniff codes in all reports -->
+    <arg value= "s"/>
 
     <!-- use colors in output -->
     <arg name="colors"/>
@@ -16,42 +19,10 @@
     <file>src</file>
     <file>tests</file>
 
-    <exclude-pattern>*/*.js</exclude-pattern>
-    <exclude-pattern>*/*.css</exclude-pattern>
-    <exclude-pattern>*/*.xml</exclude-pattern>
-    <exclude-pattern>*/*.blade.php</exclude-pattern>
-
-    <!-- Inherit rules from: PSR12-->
-    <rule ref="PSR12"/>
-
-    <!-- You SHOULD use short array syntax -->
-    <rule ref="Generic.Arrays.DisallowLongArraySyntax">
-        <type>WARNING</type>
-    </rule>
-
-    <!-- You SHOULD fix all TODO and FIXME markers -->
-    <rule ref="Generic.Commenting.Fixme">
-        <type>WARNING</type>
-    </rule>
-    <rule ref="Generic.Commenting.Todo">
-        <type>WARNING</type>
-    </rule>
-
-    <!-- You MUST NOT use deprecated functions -->
-    <rule ref="Generic.PHP.DeprecatedFunctions"/>
-
-    <!-- You SHOULD comment if method or function has exception -->
-    <rule ref="Squiz.Commenting.FunctionCommentThrowTag">
-        <type>WARNING</type>
-    </rule>
+    <rule ref="./ruleset.xml"/>
 
     <!-- Exclude test classes, it can have not CamelCapsMethodName  -->
     <rule ref="PSR1.Methods.CamelCapsMethodName.NotCamelCaps">
         <exclude-pattern>tests/*Test.php</exclude-pattern>
-    </rule>
-
-    <!-- Exclude some PHP config files -->
-    <rule ref="PSR1.Files.SideEffects">
-        <exclude-pattern>config/*</exclude-pattern>
     </rule>
 </ruleset>
