Debug test flow

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -19,11 +19,11 @@ jobs:
         os:
           - ubuntu-latest
         php:
-          - '8.0'
+          # - '8.0'
           - '8.1'
-          - '8.2'
+          # - '8.2'
         stability:
-          - prefer-lowest
+          # - prefer-lowest
           - prefer-stable
 
     name: PHP${{ matrix.php }} - ${{ matrix.stability }} - ${{ matrix.os }}
@@ -36,22 +36,22 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick, fileinfo
+          # extensions: libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick, fileinfo
           coverage: none
 
-      - name: Setup problem matchers
-        run: |
-          echo "::add-matcher::${{ runner.tool_cache }}/php.json"
-          echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
+      # - name: Setup problem matchers
+      #   run: |
+      #     echo "::add-matcher::${{ runner.tool_cache }}/php.json"
+      #     echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
 
-      - name: Cache composer dependencies
-        uses: actions/cache@v3
-        with:
-          path: vendor
-          key: composer-${{ matrix.stability }}-${{ hashFiles('composer.json') }}
+      # - name: Cache composer dependencies
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: vendor
+      #     key: composer-${{ matrix.stability }}-${{ hashFiles('composer.json') }}
 
       - name: Install dependencies
         run: composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
       - name: Execute tests
-        run: vendor/bin/phpunit
+        run: vendor/bin/phpunit --debug
