Debug test flow

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -56,5 +56,4 @@ jobs:
       - name: Execute tests
         run: |
           ls -la ./vendor/orchestra/testbench-core/laravel
-          ./vendor/bin/phpunit --debug || exit 0
-          ls -la ./vendor/orchestra/testbench-core/laravel
+          ./vendor/bin/phpunit --debug || ls -la ./vendor/orchestra/testbench-core/laravel
