--- a/.github/workflows/test-install.yml
+++ b/.github/workflows/test-install.yml
@@ -1,4 +1,4 @@
-name: Run tests
+name: Test install
 
 on:
   push:
@@ -30,5 +30,5 @@ jobs:
           cd test-project
           composer require rabiloo/coding-standard --dev
           ls -la
-          php artisan vendor:publish --tag rabiloo-coding-standard
+          php artisan vendor:publish --tag rabiloo-coding-standard --ansi --force
           ls -la
