--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
-
+    name: Auto update changelog
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
